[package]
name = "target-features"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust compiler target feature database"
repository = "https://github.com/calebzulawski/target-features"
categories = ["hardware-support", "no-std"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
